--- a/docs/style.css
+++ b/docs/style.css
@@ -100,6 +100,16 @@ header > h1 {
     margin-top: 50px;
 }
 
+a:link {
+    color: white;
+}
+a:visited {
+    color: #31b43a;
+  }
+a:hover {
+    color: #e25840;
+}
+
 .green-glow {
     border: 4px solid #4dcc7d;
     box-shadow: 0 0 10px #31b43a;
